<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about.AboutGameActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewAboutGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/text_view_about"
        android:textSize="24sp"
        android:gravity="start"/>

    <TextView
        android:id="@+id/textViewDeveloper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/text_view_developer"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewTelegram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickTelegram"
            android:src="@drawable/telegram"
            android:contentDescription="@string/telegram_description"/>

        <ImageView
            android:id="@+id/imageViewVkontakte"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickVkontakte"
            android:src="@drawable/vk"
            android:contentDescription="@string/vkontakte_description"/>

        <ImageView
            android:id="@+id/imageViewInstagram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickInstagram"
            android:src="@drawable/instagram"
            android:contentDescription="@string/instagram_description"/>

    </LinearLayout>

</LinearLayout>