<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetContainer"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/buttonEasy"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_easy"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/buttonMedium"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_medium"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/buttonHard"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_hard"
        android:textColor="@color/black"
        android:textSize="20sp"/>

</LinearLayout>