<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".finish.FinishActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/imageViewLogoFinish"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/win_logo"
        android:contentDescription="@string/img_win_logo"/>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_view_win"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/textViewInfoLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/text_view_info_level"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewCurrentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/text_view_current_time"
        app:layout_constraintEnd_toEndOf="@+id/textViewInfoLevel"
        app:layout_constraintStart_toStartOf="@+id/textViewInfoLevel"
        app:layout_constraintTop_toBottomOf="@+id/textViewInfoLevel"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewBestTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/text_view_best_time"
        app:layout_constraintEnd_toEndOf="@+id/textViewCurrentTime"
        app:layout_constraintStart_toStartOf="@+id/textViewCurrentTime"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentTime"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewCurrentMistakes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/text_view_current_mistakes"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewBestTime"
        app:layout_constraintStart_toStartOf="@+id/textViewBestTime"
        app:layout_constraintTop_toBottomOf="@+id/textViewBestTime" />

    <TextView
        android:id="@+id/textViewBestMistakes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_view_best_mistakes"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewCurrentMistakes"
        app:layout_constraintStart_toStartOf="@+id/textViewCurrentMistakes"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentMistakes" />

    <Button
        android:id="@+id/buttonNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_again_game"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="onClickNewGame"
        app:layout_constraintEnd_toEndOf="@+id/textViewBestMistakes"
        app:layout_constraintStart_toStartOf="@+id/textViewBestMistakes"
        app:layout_constraintTop_toTopOf="@+id/textViewBestMistakes" />


</androidx.constraintlayout.widget.ConstraintLayout>