<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_restart_game"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/buttonYes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/btn_yes"
            android:background="@drawable/button_background"
            android:textColor="@color/button_text"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/buttonNo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/btn_no"
            android:background="@drawable/button_background"
            android:textColor="@color/button_text"
            android:layout_margin="10dp"/>

    </LinearLayout>
</LinearLayout>